Archive2/f7/bb3d104c6ebbdb/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:24:8: warning: unused variable ‘i’ [-Wunused-variable]
   auto i = bit_sizeof(pInt);
        ^
main.cpp: In instantiation of ‘int bit_sizeof(T) [with T = int*]’:
main.cpp:24:27:   required from here
main.cpp:6:14: error: invalid operands of types ‘int*’ and ‘int*’ to binary ‘operator^’
             x^=x;
              ^
main.cpp:6:14: error:   in evaluation of ‘operator^=(int*, int*)’
main.cpp:7:14: error: invalid operands of types ‘int*’ and ‘int’ to binary ‘operator|’
             x|=1;
              ^
main.cpp:7:14: error:   in evaluation of ‘operator|=(int*, int)’
main.cpp:8:18: error: invalid conversion from ‘int*’ to ‘long long int’ [-fpermissive]
             a=b=c=x;
                  ^
main.cpp:11:14: error: invalid conversion from ‘long long int’ to ‘int*’ [-fpermissive]
             x=b;
              ^
main.cpp:16:22: error: invalid conversion from ‘long long int’ to ‘int*’ [-fpermissive]
                     x=b;
                      ^
